# callGraph

./: .gitignore  README.md  callGraph.py  graph.py  parsing.py  pyproject.toml  requirements.txt  treesitter_wrapper.py
render/: __init__.py
scripts/: test_treesitter_cpp.py
test/: example.dot  example.json  example.py  example.rs  example.ts  example_py.json
